K8s-deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  labels:
    app: docker-demo
    area: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-demo
      tier: frontend
  template:
    metadata:
      labels:
        app: docker-demo
        tier: frontend
        area: web-server
    spec:
      containers:
      - name: web-frontend
        image: 'eyalabraham/web_frontend:0.2'
        args: ["0.0.0.0:8000"]
        ports:
        - containerPort: 8000
      restartPolicy: Always
