K8s-deployment/liblogic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-logic
  labels:
    app: docker-demo
    area: rest-service
    app.kubernetes.io/part-of: my-library-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-demo
      tier: backend-liblogic-rest
  template:
    metadata:
      labels:
        app: docker-demo
        tier: backend-liblogic-rest
        area: rest-service
    spec:
      containers:
      - name: library-logic
        image: 'eyalabraham/lib_logic:0.8'
        args:
        - --host
        - "0.0.0.0"
        - --cat
        - catalog-rest
        - --borrow
        - borrowing-rest
        ports:
        - containerPort: 5004
      restartPolicy: Always
