K8s-deployment/borrowing-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: borrowing-rest
  labels:
    app: docker-demo
    area: rest-service
spec:
  type: ClusterIP
  selector:
    app: docker-demo
    tier: backend-borrowing-rest
  ports:
  - protocol: "TCP"
    port: 5002
    targetPort: 5002
