K8s-deployment/catalog-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-rest
  labels:
    app: docker-demo
    area: rest-service
spec:
  type: ClusterIP
  selector:
    app: docker-demo
    tier: backend-catalog-rest
  ports:
  - protocol: "TCP"
    port: 5001
    targetPort: 5001
