K8s-deployment/liblogic-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liblogic-rest
  labels:
    app: docker-demo
    area: rest-service
    app.kubernetes.io/part-of: my-library-app
spec:
  type: ClusterIP
  selector:
    app: docker-demo
    tier: backend-liblogic-rest
  ports:
  - protocol: "TCP"
    port: 5004
    targetPort: 5004
