K8s-deployment/patrons-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patrons-rest
  labels:
    app: docker-demo
    area: rest-service
    app.kubernetes.io/part-of: my-library-app
spec:
  type: ClusterIP
  selector:
    app: docker-demo
    tier: backend-patrons-rest
  ports:
  - protocol: "TCP"
    port: 5003
    targetPort: 5003
